# foocat5

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat5.rst  modules.rst
foocat5/: foocat5.py
tests/: test_foocat5.py
