[tool.poetry]
name = "foocat5"
version = "0.1.2"
description = "Python package that eases the pain concatenating Pandas categoricals!"
authors = ["ttimbers <tiffany.timbers@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ttimbers/foocat5"
repository = "https://github.com/ttimbers/foocat5"
documentation = 'https://foocat5.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"
python-semantic-release = "^4.10.0"
flake8 = "^3.7.9"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[tool.semantic_release]
version_variable = "foocat5/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
